# hello_world_tflite

./: .gitignore  CMakeLists.txt  Readme.md
components/tflite/: CMakeLists.txt  Readme.md
main/: CMakeLists.txt  constants.cpp  constants.hpp  hello_world_tflite.cpp  sine_model_quantized.cc
